<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="captionOptions">Options</string>
    <string name="hello">Hello World, SearchActivity!</string>
    <string name="simson">Simson\'s &#8531; Rule</string>
    <string name="coord">Coordinates</string>
    <string name="inter">Interval :</string>
    <string name="havefunctions">Function</string>
    <string name="labellower">Lower Bound :</string>
    <string name="xval">X-Values :</string>
    <string name="yval">Y-Values :</string>
    <string name="labelupper">Upper Bound :</string>
    <string name="notice">Input Function and Bounds.</string>
    <string name="xhint">0, 00, 0.0, 00.00 </string>
    <string name="simsoncoordinates">Input Coordinates Seperated With Commas.</string>
    <string name="name">Name:</string>
    <string name="search">Search</string>
    <string name="ID">ID Number:</string>
    <string name="labelEuler">Euler Method</string>
    <string name="app_name">Numerical Simulation</string>
    <string name="labelFunction">Function F( x, y ):</string>
    <string name="labelInitialx">Initial Value of x:</string>
    <string name="labelInitialy">Initial Value of y:</string>
    <string name="captionCompute">Compute</string>
    <string name="captionApproximate">Approximate</string>
    <string name="labelStepSize">Step Size h:</string>
    <string name="labelSteps">Number of Steps n:</string>
    <string name="labelEulerModified">Euler-Cauchy Method</string>
    <string name="labelRungeKutta">4th-Order Runge-Kutta Tutor</string>
    <string name="labelRungeKutta4">4th-Order Runge-Kutta Method</string>
    <string name="selected">OK</string>
    <string name="intro">MOBILE LEARNING OF NUMERICAL SIMULATIONS. </string>
    <string name="developer">Developed By:\n Babangida Zachariah.</string>
    <string name="school">KADUNA STATE UNIVERSITY.</string>
    <string name="supervisor">supervised By:\n Hajiya Sa\'adatu Abdulkadir.</string>
    <string name="captionCancel">Cancel</string>
    <string name="runge_kutta">Runge Kutta Simulation</string>
    <string name="SimsonOne">Simson\'s &#8531; Method</string>
    <string name="Simson">Simson\'s Method</string>
    <string name="labelTrapezoidal">Trapezoidal Method</string>
    <string name="labelSimsonThree">Simson\'s 3/8 Method</string>
    <string name="selectmethod">Select Numerical Method</string>
    <string name="euler">Euler Method</string>
    <string name="labelEulerLearning">Euler Method Tutor</string>
    <string name="rungeKutta">2nd Runge-Kutta Method</string>
    <string name="fourthRungeKutta">4th Runge-Kutta Method</string>
    <string name="closeResult">Close Result</string>
    <string name="theresult">Result of Simulation</string>
    <string name="bottom">Supervised By :    HAJIYA SA\'ADATU ABDULKADIR.</string>
    <string name="top">Designed and Implemented By:  BABANGIDA ZACHARIAH.</string>
    <string name="logo">Logo</string>
    <string name="captionBack">Back</string>
    <string name="labelEulerTutor">Learning Euler Method</string>
    <string name="labelRungeKuttaTutor">Learning Runge-Kutta Method</string>
    <string name="labelEulerCauchyTutor">Learning Euler-Cauchy Method</string>
    <string name="numerichint">0.00</string>
    <string name="numeric">00</string>
    <string name="captionStart">Start</string>
    <string name="captionIntro">Starting..</string>
    <string name="cont">Continue</string>
    <string name="phonenumber">Phone Number</string>
    <string name="smsbody">SMS Body</string>
    <string name="continu">Press Any Button To Continue</string>
    <string name="hint">f(x,y)</string>
    <string name="send">Send</string>
    <string name="versionInfo"> Version 1.0.0</string>
    <string name="graph">The Graph of y against x:</string>
    <string name="viewgraph">Graph</string>
    <string name="labelEulerCauchy">Euler-Cauchy Method Tutor</string>


    <string name="action_settings">Action Settings</string>
</resources>