<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#bebebe"
        android:orientation="vertical" >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/labelFunction"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/function"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fffff0"
            android:textColor="#000000"
            android:hint="@string/hint"
            android:inputType="text" />

        <TextView
            android:layout_width="fill_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/labelInitialx"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/initialX"
            android:background="#fffff0"
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numerichint"
            android:inputType="numberDecimal" />


        <TextView
            android:layout_width="fill_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/labelInitialy"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/initialY"
            android:background="#fffff0"
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numerichint"
            android:inputType="numberDecimal" />


        <TextView
            android:layout_width="fill_parent"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/labelStepSize"
            android:textStyle="bold" />


        <EditText
            android:background="#fffff0"
            android:textColor="#000000"
            android:id="@+id/stepSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numerichint"
            android:inputType="numberDecimal" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/labelSteps"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/steps"
            android:layout_width="fill_parent"
            android:background="#fffff0"
            android:textColor="#000000"
            android:hint="@string/numeric"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_EulerModifiedCompute"
                android:layout_width="160dp"
                android:background="@null"
                android:layout_height="wrap_content"
                android:text="@string/captionCompute"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_EulerModifiedBack"
                android:background="@null"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#000000"
                android:layout_alignParentTop="true"
                android:text="@string/captionBack"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>