<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:background="#bebebe">


        <RadioGroup
            android:id="@+id/method"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:orientation="vertical" >


            <RadioButton
                android:id="@+id/eulerTutor"
                android:textColorHighlight="#ff0000"
                android:textColor="#000000"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelEulerLearning"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/eulerMethod"
                android:textColorHighlight="#ff0000"
                android:textColor="#000000"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelEuler"
                android:textStyle="bold" />


            <RadioButton

                android:id="@+id/eulerCauchyMethod"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="#ff0000"
                android:textColor="#000000"
                android:text="@string/labelEulerCauchy"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/eulerModifiedMethod"
                android:layout_width="fill_parent"
                android:textColorHighlight="#ff0000"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="@string/labelEulerModified"
                android:textStyle="bold" />



            <RadioButton
                android:id="@+id/rungeKuttaTutor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="#ff0000"
                android:textColor="#000000"
                android:text="@string/labelRungeKutta"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/rungeKutta4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="#ff0000"
                android:textColor="#000000"
                android:text="@string/labelRungeKutta4"
                android:textStyle="bold" />


        </RadioGroup>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
                android:id="@+id/btn_MethodSelectionButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@null"
                android:text="@string/selected" />

            <Button
                android:id="@+id/btnBackButton"
                android:layout_width="160dp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginRight="2dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:textStyle="bold"

                android:text="@string/captionCancel" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>